@@ -5,6 +5,8 @@
 
 #include <testfwk.h>
 
+#pragma disable_warning 85
+
 #if !defined(__SDCC_pdk14) && !(defined(__SDCC_mcs51) && defined(__SDCC_MODEL_SMALL)) // Lack of memory
 
 #define LINE_SIZE 32
